# KEV

./: .editorconfig  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .npmrc  .prettierignore  .prettierrc  AGENTS.md  CLAUDE.md  README.md  commitlint.config.cjs  docker-compose.yml  knip.json  package-lock.json  package.json  tsconfig.base.json  turbo.json
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  gitleaks.yml
.husky/: pre-commit
backend/: mvnw  package.json  pom.xml
backend/load/: load.js  smoke.js
docs/: ARCHITECTURE.md  CONTRIBUTING.md  ENVIRONMENT.md  SECURITY.md
frontend/: .env.example  README.md  app.config.ts  babel.config.js  eslint.config.js  jest-setup.ts  jest.config.js  metro.config.js  package.json  tsconfig.json
frontend/.maestro/: smoke.yaml
frontend/src/api/: admin.ts  attendance.ts  auth.ts  chat.ts  client.ts  directory.ts  hooks.ts  notifications.ts  queryClient.ts  reports.ts  schemas.ts  sessions.ts  verify.ts
frontend/src/app/: _layout.tsx  account-credentials.tsx  group-session.tsx  index.perf-test.tsx  index.tsx  invigilators.tsx  reports.tsx  room-setup.tsx  student-result.tsx  upgrade.tsx  verify-code.tsx
ml/: .dockerignore  .env.example  Dockerfile  README.md  package.json  pyproject.toml
ml/app/: __init__.py  config.py  face.py  main.py  sentry.py
ml/tests/: test_face.py  test_health.py
scripts/: deploy-ml-hf.py  dev-infra.mjs  dev.mjs  gen-api-types.mjs  load-root-env.mjs  run-backend.mjs  run-ml.mjs
ui-mockup-html/: roomsetup.html
(+420 files in other folders)
